public/scss/pages/_layout.scss
/**
* Section
**/

.section {
	padding: 130px 0;
	position: relative;
	z-index: 2;
}

.kf-titles {
	width: 100%;
}

.kf-subtitle {
	margin: 0 0 10px 0;
	position: relative;
	display: inline-block;
	vertical-align: top;
	font-size: 16px;
	text-transform: uppercase;
	letter-spacing: 0.03em;
	color: #b99272;
	&.with-icon {
		&:before {
			content: '';
			position: absolute;
			left: -45px;
			top: -25px;
			width: 93px;
			height: 95px;
			background: url(assets/images/cafe_icon.png) no-repeat;
			background-size: contain;
		}
	}
}

.kf-title {
	margin: 0 0 70px 0;
	font-size: 42px;
	font-family: "Oswald";
	color: #fff;
	font-weight: 400;
}

.kf-p-title {
	margin: 20px 0;
	font-size: 70px;
	font-family: $base_font2_family;
	color: #fff;
	font-weight: 400;
}

.kf-text {
	p {
		margin: 0;
	}
}

.kf-image-hover {
	position: relative;
	overflow: hidden;
	display: block;
	font-size: 0;
	img {
		transform: scale(1);
		transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
		-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	}
	&:hover {
		img {
			transform: scale(1.05);
		}
	}
}

.kf-parallax {
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
}

.kf-parallax-icon {
	position: absolute;
	.p-icon {
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 100%;
		background-position: center center;
		background-repeat: no-repeat;
		background-size: contain;
	}
	&.pi-1 {
		left: -220px;
		top: 5%;
		width: 159px;
		height: 145px;
	}
	&.pi-2 {
		left: auto;
		right: -220px;
		top: 10%;
		width: 131px;
		height: 178px;
	}
	&.pi-3 {
		left: auto;
		right: -220px;
		top: 90%;
		width: 205px;
		height: 106px;
	}
	&.pi-4 {
		left: auto;
		left: 0;
		top: 30%;
		width: 25px;
		height: 137px;
	}
	&.pi-5 {
		left: auto;
		right: 0;
		top: 40%;
		width: 59px;
		height: 158px;
	}
}

@media screen and (max-width: 767px) {
	.section {
		padding: 70px 0;
	}
	.kf-titles {
		text-align: left!important;
	}
	.kf-subtitle {
		font-size: 16px;
	}
	.kf-title {
		margin: 0 0 50px 0;
		font-size: 32px;
	}
	.kf-p-title {
		font-size: 32px;
	}
}

.section-bg {
	background-color: #090c0f;
}


/**
* Section Hero Started
**/

.section.kf-started-slider {
	padding: 0;
	position: relative;
	overflow: hidden;
	.swiper-slide {
		overflow: hidden;
	}
}

.swiper-button-prev, .swiper-button-next {
	left: 0;
	margin-top: -55px;
	width: 47px;
	height: 111px;
	border: none;
	outline: none;
	&:before, &:after {
		content: '';
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 100%;
		border: none;
		background: url(assets/images/nav.png) no-repeat;
		background-size: contain;
		transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
		-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	}
	&:after {
		background: url(assets/images/nav2.png) no-repeat;
		background-size: contain;
		opacity: 0;
	}
	&:hover {
		&:before {
			opacity: 0;
		}
		&:after {
			opacity: 1;
		}
	}
}
.swiper-button-next {
	left: auto;
	right: 0;
	transform: scale(-1);
}

.kf-started-item {
	position: relative;
	width: 100%;
	height: calc(100vh - 140px);
	min-height: 780px;
	.container {
		height: 100%;
		display: flex;
		align-items: center;
	}
	.slide {
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 100%;
		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
		&:before {
			content: '';
			position: absolute;
			left: 0;
			top: 0;
			width: 100%;
			height: 100%;
			background: #0e1317;
			opacity: 0.2;
		}
	}
	.description {
		width: 100%;
	}
	.name {
		margin: 0 0 50px 0;
		font-family: "Oswald";
		font-size: 120px;
		line-height: 1.2;
		color: #fff;
		font-weight: 500;
	}
	.subtitles {
		position: relative;
		margin: 0 0 10px 0;
		padding-left: 50px;
		font-size: 16px;
		text-transform: uppercase;
		letter-spacing: 0.03em;
		color: #fff;
		&:before {
			content: '';
			position: absolute;
			left: 0;
			top: 50%;
			width: 30px;
			height: 1px;
			background: #b99271;
		}
	}
}

.kf-bts {
	.kf-btn {
		margin: 0 10px 0 0;
	}
}

@media screen and (max-width: 992px) {
	.kf-started-item {
		.name {
			font-size: 90px;
			line-height: 100px;
		}
		.subtitles {
			ul {
				li {
					font-size: 16px;
					&:before {
						margin-top: -6px;
						width: 12px;
						height: 12px;
					}
				}
			}
		}
	}
}

@media screen and (max-width: 767px) {
	.kf-started-item {
		height: calc(100vh - 90px);
		min-height: 480px;
		.name {
			font-size: 50px;
			line-height: 60px;
		}
		.subtitles {
			ul {
				li {
					padding-left: 15px;
					margin: 0 5px;
					font-size: 14px;
					&:before {
						margin-top: -4px;
						width: 8px;
						height: 8px;
					}
				}
			}
		}
	}
	.section.kf-started-slider .swiper-button-prev,
	.section.kf-started-slider .swiper-button-next {
		display: none;
	}
	.section.kf-started-slider .kf-bts .kf-btn {
		margin-bottom: 10px;
	}
}


/**
* Section About
**/

.section.kf-about {
	padding-bottom: 0;
	overflow: hidden;
	.kf-title {
		margin-bottom: 30px;
	}
}

.kf-about-quote {
	margin-top: 35px;
	padding: 20px;
	position: relative;
	font-size: 22px;
	color: #fff;
	line-height: 1.5;
	font-weight: 400;
	font-style: italic;
	background: #b99272;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	&:after {
		content: '';
		position: relative;
		clear: both;
		display: block;
	}
	img {
		float: left;
		width: 95px;
		border-radius: 100%;
		-webkit-border-radius: 100%;
	}
	div {
		margin-left: 115px;
	}
}

.kf-about-image {
	margin-right: -100px;
	text-align: right;
	img {
		max-width: 686px;
	}
}

@media screen and (max-width: 992px) {
	.kf-about-image {
		margin-right: 0;
		margin-top: 50px;
		img {
			max-width: 100%;
		}
	}
}

@media screen and (max-width: 767px) {
	.kf-about-quote {
		font-size: 16px;
	}
}


/**
* Section Services
**/

.kf-services-items {
	margin-top: -30px;
}
/* ... */

